--- a/build.gradle
+++ b/build.gradle
@@ -252,6 +252,10 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'com.github.danimahardhika:cafebar:1.3.1'
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 }
 
