--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ tasks {
 }
 
 
+
+
 Properties localProps = new Properties()
 File localPropsFile = project.rootProject.file('local.properties')
 if (localPropsFile.exists()) {
@@ -32,6 +34,10 @@ def isPublicBuild = "true"
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.protobuf'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'realm-android'
+
 
 android {
     compileSdkVersion 30
@@ -256,6 +262,12 @@ dependencies {
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
 
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+
+    implementation 'com.google.dagger:dagger:2.24'
+    kapt 'com.google.dagger:dagger-compiler:2.20'
 
 }
 
@@ -281,6 +293,3 @@ protobuf {
     }
 }
 
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'realm-android'
