change android target permission

--- a/build.gradle
+++ b/build.gradle
@@ -40,15 +40,15 @@ apply plugin: 'realm-android'
 
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 29
     buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 29
 
-        versionCode 2
-        versionName "2.0"
+        versionCode 4
+        versionName "KeyOS v4"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
