--- a/keyOS/AndroidManifest.xml
+++ b/keyOS/AndroidManifest.xml
@@ -117,8 +117,8 @@
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" />
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
-    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
+<!--    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>-->
+<!--    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />-->
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
