--- a/keyOS/AndroidManifest.xml
+++ b/keyOS/AndroidManifest.xml
@@ -112,14 +112,12 @@
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 <uses-permission android:name="android.permission.READ_PRECISE_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" />
-<!--    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>-->
-<!--    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />-->
-    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+<!--    <uses-permission android:name="android.permission.READ_CALL_LOG" />-->
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
