--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
 
-        versionCode 8
-        versionName "KeyOS v8"
+        versionCode 9
+        versionName "KeyOS v9"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
@@ -56,6 +56,7 @@ android {
         buildConfigField "boolean", "HAS_LEAKCANARY", "false"
         buildConfigField "boolean", "FEATURE_BUG_REPORTER", "false"
         buildConfigField "boolean", "IS_PLAYSTORE_BUILD", "true"
+        buildConfigField "String", "QR_KEY", '"DevAsh@2017"'
 
 
         ndk { abiFilters "armeabi-v7a", "x86", "x86_64", "arm64-v8a" }
@@ -251,13 +252,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.3'
     implementation 'com.github.danimahardhika:cafebar:1.3.1'
     implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
 
 
 
