--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
 
-        versionCode 28
-        versionName "KeyOS v28"
+        versionCode 30
+        versionName "KeyOS v30"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
@@ -55,7 +55,7 @@ android {
         buildConfigField "boolean", "DEBUG_STRICT_MODE", "false"
         buildConfigField "boolean", "HAS_LEAKCANARY", "false"
         buildConfigField "boolean", "FEATURE_BUG_REPORTER", "false"
-        buildConfigField "boolean", "IS_PLAYSTORE_BUILD", "true"
+        buildConfigField "boolean", "IS_PLAYSTORE_BUILD", "false"
         buildConfigField "String", "QR_KEY", '"DevAsh@2017"'
 
 
