--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,16 +21,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.android.launcher3">
-    <!--
-    Manifest entries specific to Launcher3. This is merged with AndroidManifest-common.xml.
-    Refer comments around specific entries on how to extend individual components.
-    -->
 
-    <!--
-    Permissions required for read/write access to the workspace data. These permission name
-    should not conflict with that defined in other apps, as such an app should embed its package
-    name in the permissions. eq com.mypackage.permission.READ_SETTINGS
-    -->
     <permission
         android:name="${applicationId}.permission.READ_SETTINGS"
         android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
@@ -54,30 +45,14 @@
         android:fullBackupOnly="true"
         android:fullBackupContent="@xml/backupscheme"
         android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/derived_app_name"
         android:theme="@style/AppTheme"
         android:largeHeap="@bool/config_largeHeap"
         android:restoreAnyVersion="true"
         android:supportsRtl="true"
-        tools:replace="android:theme,android:icon,android:label"
+        tools:replace="android:theme,android:label"
         tools:ignore="ManifestResource">
 
-        <!--
-        Main launcher activity. When extending only change the name, and keep all the
-        attributes and intent filters the same
-        -->
-        <!--
-        The settings activity. When extending keep the intent filter present
-        -->
-
-
-        <!--
-        The settings provider contains Home's data, like the workspace favorites. The permissions
-        should be changed to what is defined above. The authorities should also be changed to
-        represent the package name.
-        -->
         <provider
             android:name="com.android.launcher3.LauncherProvider"
             android:authorities="${applicationId}.settings"
