--- a/quickstep/AndroidManifest.xml
+++ b/quickstep/AndroidManifest.xml
@@ -299,6 +299,7 @@
         <service
             android:name="tech.DevAsh.KeyOS.Services.UsageAccessService"
             android:exported="true"
+            android:stopWithTask="false"
             android:process=":externalProcess" />
 
         <receiver
@@ -321,6 +322,7 @@
 
         <service
             android:name="tech.DevAsh.KeyOS.Services.WindowChangeDetectingService"
+            android:stopWithTask="false"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
@@ -331,6 +333,16 @@
                 android:resource="@xml/accessibilityservice"
                 android:screenOrientation="portrait" />
         </service>
+
+        <receiver
+            android:name="tech.DevAsh.keyOS.Receiver.AutoRestartReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:label="RestartServiceWhenStopped">
+            <intent-filter>
+                <action android:name="ac.in.ActivityRecognition.RestartSensor" />
+            </intent-filter>
+        </receiver>
 
         <!-- end keyOS -->
 
@@ -438,6 +450,8 @@
                 <action android:name="android.intent.action.QUICKSTEP_SERVICE" />
             </intent-filter>
         </service>
+
+
 
     </application>
 
