--- a/build.gradle
+++ b/build.gradle
@@ -291,8 +291,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'com.github.halysongoncalves:pugnotification:1.8.1'
     implementation 'com.agrawalsuneet.androidlibs:fourfoldloader:0.4'
-
-
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.google.dagger:dagger:2.24'
     kapt 'com.google.dagger:dagger-compiler:2.20'
 
