--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
 
-        versionCode 40
-        versionName "KeyOS v40"
+        versionCode 41
+        versionName "KeyOS v41"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
@@ -57,6 +57,8 @@ android {
         buildConfigField "boolean", "FEATURE_BUG_REPORTER", "false"
         buildConfigField "boolean", "IS_PLAYSTORE_BUILD", "true"
         buildConfigField "String", "QR_KEY", '"DevAsh@2017"'
+        buildConfigField "String", "PRIVACY_POLICY", '"https://devash.tech/keyos/privacypolicy"'
+
 
 
         ndk { abiFilters "armeabi-v7a", "x86", "x86_64", "arm64-v8a" }
@@ -294,6 +296,7 @@ dependencies {
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.google.dagger:dagger:2.24'
     kapt 'com.google.dagger:dagger-compiler:2.20'
+
 
 }
 
