--- a/quickstep/AndroidManifest.xml
+++ b/quickstep/AndroidManifest.xml
@@ -346,6 +346,19 @@
                 android:screenOrientation="portrait" />
         </service>
 
+<!--        <receiver android:name="tech.DevAsh.keyOS.Receiver.KioskReceiver"-->
+<!--            android:exported="true"-->
+<!--            android:enabled="true">-->
+<!--            <intent-filter android:priority="1000">-->
+<!--                <action android:name="START_KIOSK" />-->
+<!--                <action android:name="STOP_KIOSK" />-->
+<!--                <action android:name="SHOW_ALERT_DIALOG" />-->
+<!--                <action android:name="REMOVE_ALERT_DIALOG" />-->
+
+<!--            </intent-filter>-->
+
+<!--        </receiver>-->
+
         <receiver
             android:name="tech.DevAsh.keyOS.Receiver.AutoRestartReceiver"
             android:enabled="true"
