--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,8 @@ android {
         minSdkVersion 22
         targetSdkVersion 29
 
-        versionCode 48
-        versionName "KeyOS v48"
+        versionCode 50
+        versionName "KeyOS v50"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
@@ -122,6 +122,7 @@ android {
         keyOS {
             applicationId 'tech.DevAsh.keyOS'
             dimension "custom"
+            buildConfigField "boolean", "IS_PLAYSTORE_BUILD", "false"
             buildConfigField "boolean", "IS_DEV_BUILD", "false"
         }
 
@@ -236,21 +237,16 @@ dependencies {
     implementation 'androidx.palette:palette-ktx:1.0.0'
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.github.florent37:fiftyshadesof:1.0.0'
-    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.github.LawnchairLauncher:hoko-lite:4e0d797'
-
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-
     implementation 'com.github.topjohnwu.libsu:core:2.5.0'
     implementation 'eu.chainfire:librootjava:1.3.0'
     implementation 'me.mvdw.recyclerviewmergeadapter:recyclerviewmergeadapter:2.1.0'
-
     implementation 'me.xdrop:fuzzywuzzy:1.2.0'
-
     quickstepImplementation project(':systemui-shared')
     keyOSImplementation files('keyOS/libs/sesame-lib.aar')
     proImplementation files('keyOS/libs/sesame-lib.aar')
@@ -265,7 +261,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.1'
@@ -287,7 +283,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.github.danimahardhika:cafebar:1.3.1'
     implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.4'
@@ -299,9 +295,8 @@ dependencies {
     implementation 'com.agrawalsuneet.androidlibs:fourfoldloader:0.4'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.google.dagger:dagger:2.24'
-    kapt 'com.google.dagger:dagger-compiler:2.20'
+    kapt 'com.google.dagger:dagger-compiler:2.24'
     implementation 'com.google.android.play:core:1.8.3'
-
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
